<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="outputText"
            type="String" />
        <variable
            name="onClickHandler"
            type="com.creative.androidfundamentalsbydantech.fragment.mvvm.SimpleMVVMFragment.OnClickHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_clear"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                android:text="@string/welcome_to_fragment_simple_mvvm"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textfield.TextInputEditText
                android:maxLines="1"
                android:id="@+id/input_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/buttonSubmit"
                android:onClick="@{(v) -> onClickHandler.onSubmitEncryptClick(v)}"
                android:text="@string/submit_encrypt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@{outputText}"
                android:textColor="@color/black"
                android:id="@+id/output_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <Button
            android:id="@+id/button_clear"
            android:onClick="@{(v) -> onClickHandler.onClearClick(v)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/clear"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>